--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "swiper": "^9.1.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
