--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "swiper": "^9.1.1",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
